modules/networking/epis.tf
# /* Elastic IP for NAT */
# resource "aws_eip" "NAT_eip" {
#   vpc        = true
#   depends_on = [aws_internet_gateway.ig]
# }
